# fringe-projection

./: CMakeLists.txt  debug.cpp  main.cpp
include/: DebugVisualizer.hpp  FringePattern.hpp  FringeProcess.hpp  GrayCode.hpp
src/: DebugVisualizer.cpp  FringePattern.cpp  FringeProcess.cpp  GrayCode.cpp
